[tool.poetry]
name = "radiation"
version = "0.1.0"
description = ""
authors = ["Shahar Yarnitzky <shahar.yarn@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
parso = "^0.8.3"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
mypy = "^0.931"
flake8 = "^4.0.1"
flake8-black = "^0.2.4"
flake8-isort = "^4.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
